tests/spec/emit/snapshots/json_enum_with_single_payload.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[json]
  enum Shape {
    Circle(float64),
    Square(float64),
    Unknown,
  }
---
package main

import (
	"encoding/json"
	"errors"
	"fmt"
)

func MakeShapeCircle(arg0 float64) Shape {
	return Shape{Tag: ShapeCircle, Circle: arg0}
}

func MakeShapeSquare(arg0 float64) Shape {
	return Shape{Tag: ShapeSquare, Square: arg0}
}

func MakeShapeUnknown() Shape {
	return Shape{Tag: ShapeUnknown}
}

type ShapeTag int

const (
	ShapeCircle ShapeTag = iota
	ShapeSquare
	ShapeUnknown
)

type Shape struct {
	Tag    ShapeTag
	Circle float64
	Square float64
}

func (s Shape) MarshalJSON() ([]byte, error) {
	switch s.Tag {
	case ShapeCircle:
		return json.Marshal(map[string]any{"Circle": s.Circle})
	case ShapeSquare:
		return json.Marshal(map[string]any{"Square": s.Square})
	case ShapeUnknown:
		return json.Marshal("Unknown")
	default:
		return nil, fmt.Errorf("unknown Shape tag: %d", s.Tag)
	}
}

func (s *Shape) UnmarshalJSON(data []byte) error {
	var name string
	if err := json.Unmarshal(data, &name); err == nil {
		switch name {
		case "Unknown":
			s.Tag = ShapeUnknown
			return nil
		default:
			return fmt.Errorf("unknown Shape variant: %s", name)
		}
	}
	var obj map[string]json.RawMessage
	if err := json.Unmarshal(data, &obj); err != nil {
		return errors.New("invalid Shape JSON")
	}
	for key, val := range obj {
		switch key {
		case "Circle":
			s.Tag = ShapeCircle
			return json.Unmarshal(val, &s.Circle)
		case "Square":
			s.Tag = ShapeSquare
			return json.Unmarshal(val, &s.Square)
		default:
			return fmt.Errorf("unknown Shape variant: %s", key)
		}
	}
	return errors.New("empty Shape JSON object")
}
