tests/spec/emit/snapshots/json_tagged_struct_field_access.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[json]
  struct User {
    name: string,
    age: int,
  }
  
  fn test() -> string {
    let u = User { name: "Alice", age: 30 };
    u.name
  }
---
package main

type User struct {
	Name string `json:"name"`
	Age  int    `json:"age"`
}

func test() string {
	u := User{
		Name: "Alice",
		Age:  30,
	}
	return u.Name
}
